[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6.3"
#ark-bls12-381 = "0.3.0"
#ark-serialize = { version = "0.3.0", features = ["derive"] }
#ark-ec = "0.3.0"
#ark-ff = "0.3.0"
#ark-poly = "0.3.0"
sha2 = "0.10.2"
lazy_static = "1.4.0"
hex = "0.4.3"
anyhow = "1.0.58"
cached = "0.37.0"
digest = "0.10.3"
serde = { version = "1.0.139", features = ["derive"] }
bincode = "1.3.3"
num-traits = "0.2.15"
blstrs = "0.5.0"
group = "0.12.0"
pairing = "0.22.0"

[dev-dependencies]
blstrs = "0.5.0"