[package]
name = "crypto_blstrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
blstrs = "0.5.0"
blst = "0.3.9"
ff = "0.12.0"
group = "0.12.0"
pairing = "0.22.0"
rand = "0.8.5"
sha2 = "0.10.2"
digest = "0.10.3"
hex = "0.4.3"
anyhow = "1.0.58"
serde = { version = "1.0.139", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
