[package]
name = "network"
version = "0.1.0"
edition = "2021"

[features]
default =  ["plotter"]
plotter = ["dep:clap", "dep:serde_json", "dep:colored"]

[dependencies]
utils = { path = "../utils" }
bytes = "1.1.0"
futures = "0.3.21"
serde = { version = "1.0.139", features = ["derive"] }
serde_bytes = "0.11.6"
tokio = { version = "1.20.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
lazy_static = "1.4.0"
bincode = "1.3.3"
anyhow = "1.0.58"
log = "0.4.17"
rand = "0.8.5"
clap = { version = "3.2.12", features = ["derive"], optional = true }
serde_json = { version = "1.0.83", optional = true }
colored = { version = "2.0.0", optional = true }
