[package]
name = "vaba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
network = { path = "../network" }
protocol = { path = "../protocol" }
tss = { path = "../tss" }
utils = { path = "../utils" }
serde = { version = "1.0.139", features = ["derive"] }
anyhow = "1.0.58"
log = "0.4.17"
futures = "0.3.21"
simple_logger = { version = "2.2.0", default-features = false, features = ["colors"] }

[dev-dependencies]
crypto_blstrs = { path = "../crypto_blstrs" }
